# hpm_awtrix

./: .gitmodules  README.md
1.software/app/: CMakeLists.txt  WS2812_Conf.h  led.c  main.c  main.h  shell.c  shell.h  tx_user.h
1.software/board/: board.hpmpc
